[gd_scene load_steps=2 format=2]

[ext_resource path="res://_Scripts/GameController.gd" type="Script" id=1]

[node name="GameController" type="Node"]
script = ExtResource( 1 )

[node name="Canvas" type="Node" parent="."]

[node name="SinglePlayer" type="Button" parent="Canvas"]
margin_left = 471.0
margin_top = 264.0
margin_right = 570.0
margin_bottom = 284.0
text = "SinglePlayer"

[node name="Join Game" type="Button" parent="Canvas"]
margin_left = 525.0
margin_top = 302.0
margin_right = 613.0
margin_bottom = 322.0
text = "Join"

[node name="Host Game" type="Button" parent="Canvas"]
margin_left = 524.0
margin_top = 336.0
margin_right = 612.0
margin_bottom = 356.0
text = "Host Game"

[node name="IPAddress" type="LineEdit" parent="Canvas"]
margin_left = 364.0
margin_top = 298.0
margin_right = 510.0
margin_bottom = 322.0
placeholder_text = "IP Address"

[node name="LineEdit" type="LineEdit" parent="Canvas"]
margin_left = 452.0
margin_top = 334.0
margin_right = 510.0
margin_bottom = 358.0
placeholder_text = "Port"
[connection signal="button_down" from="Canvas/SinglePlayer" to="." method="_on_SinglePlayer_button_down"]
[connection signal="button_down" from="Canvas/Join Game" to="." method="_on_Join_Game_button_down"]
[connection signal="button_down" from="Canvas/Host Game" to="." method="_on_Host_Game_button_down"]
